--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -2,14 +2,9 @@ FROM node:alpine AS build
 
 WORKDIR /app
 
-ARG STORE_CORS=${STORE_CORS}
 ARG ADMIN_CORS=${ADMIN_CORS}
-ARG AUTH_CORS=${AUTH_CORS}
-ARG JWT_SECRET=${JWT_SECRET}
-ARG COOKIE_SECRET=${COOKIE_SECRET}
-ARG DISABLE_MEDUSA_ADMIN=${DISABLE_MEDUSA_ADMIN}
-ARG DATABASE_URL=${DATABASE_URL}
-ARG REDIS_URL=${REDIS_URL}
+ARG MEDUSA_BACKEND_URL=${MEDUSA_BACKEND_URL}
+ARG DISABLE_MEDUSA_ADMIN=false
 
 COPY package.json package-lock.json ./
 
@@ -17,7 +12,7 @@ RUN npm ci
 
 COPY . .
 
-RUN npm run build && npm run telemetry && npm run migrate
+RUN npm run build --admin-only && npm run telemetry
 
 RUN npm prune --production
 
