--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -16,12 +16,10 @@ RUN npm run build --admin-only && npm run telemetry
 
 RUN npm prune --production
 
-FROM node:alpine
+FROM nginx:alpine
 
-COPY --from=build /app/.medusa/server/public/admin ./public
-
-RUN npm install -g serve
+COPY --from=build /app/.medusa/server/public/admin /usr/share/nginx/html
 
 EXPOSE 80
 
-CMD ["serve", "-s", "public", "-l", "80"]
+CMD ["nginx", "-g", "daemon off;"]
