--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -2,7 +2,9 @@ FROM node:alpine AS build
 
 WORKDIR /app
 
+ARG STORE_CORS=${STORE_CORS}
 ARG ADMIN_CORS=${ADMIN_CORS}
+ARG AUTH_CORS=${AUTH_CORS}
 ARG MEDUSA_BACKEND_URL=${MEDUSA_BACKEND_URL}
 ARG DISABLE_MEDUSA_ADMIN=false
 
@@ -16,10 +18,12 @@ RUN npm run build --admin-only && npm run telemetry
 
 RUN npm prune --production
 
-FROM nginx:alpine
+FROM node:alpine
 
-COPY --from=build /app/.medusa/server/public/admin /usr/share/nginx/html
+COPY --from=build /app/.medusa/server/public/admin ./public
+
+RUN npm install -g http-server
 
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["http-server", "public", "-p", "80"]
