--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -11,9 +11,9 @@ ARG DATABASE_URL=${DATABASE_URL}
 ARG REDIS_URL=${REDIS_URL}
 ARG DISABLE_MEDUSA_ADMIN=true
 
-COPY package.json package-lock.json ./
+COPY package.json ./
 
-RUN npm ci
+RUN npm install
 
 COPY . .
 
