set env var disable admin

--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -10,6 +10,7 @@ ARG COOKIE_SECRET=${COOKIE_SECRET}
 ARG DATABASE_URL=${DATABASE_URL}
 ARG REDIS_URL=${REDIS_URL}
 ARG DISABLE_MEDUSA_ADMIN=true
+ENV DISABLE_MEDUSA_ADMIN=true
 
 COPY package.json ./
 
