correct admin path

--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -7,6 +7,7 @@ ARG ADMIN_CORS=${ADMIN_CORS}
 ARG AUTH_CORS=${AUTH_CORS}
 ARG MEDUSA_BACKEND_URL=${MEDUSA_BACKEND_URL}
 ARG DISABLE_MEDUSA_ADMIN=false
+ENV DISABLE_MEDUSA_ADMIN=false
 
 COPY package.json package-lock.json ./
 
