--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -12,9 +12,9 @@ ARG REDIS_URL=${REDIS_URL}
 ARG DISABLE_MEDUSA_ADMIN=true
 ENV DISABLE_MEDUSA_ADMIN=true
 
-COPY package.json package-lock.json ./
+COPY package.json ./
 
-RUN npm ci
+RUN npm install
 
 COPY . .
 
