--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -22,10 +22,13 @@ RUN npm run build && npm run telemetry && npm run migrate
 
 FROM node:alpine
 
-COPY --from=build /app/.medusa/server ./
+RUN npm prune --production
 
-RUN npm install --only=production
+COPY --from=build /app/.medusa/server ./
+COPY --from=build /app/node_modules ./node_modules
 
 ENV NODE_ENV=production
+
+EXPOSE 9000
 
 CMD ["npm", "run", "start"]
