--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -22,7 +22,7 @@ RUN npm run build && npm run telemetry && npm run migrate
 
 FROM node:alpine
 
-RUN npm prune --production
+RUN npm prune --omit=dev
 
 COPY --from=build /app/.medusa/server ./
 COPY --from=build /app/node_modules ./node_modules
