--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -26,7 +26,7 @@ COPY --from=build /app/.medusa/server ./
 
 ENV NODE_ENV=production
 
-RUN npm ci --omit=dev
+RUN npm install --omit=dev
 
 EXPOSE 9000
 
