--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -15,14 +15,12 @@ RUN npm ci
 
 COPY . .
 
-RUN npm run build --admin-only && npm run telemetry
+RUN npm run build --admin-only
 
 FROM node:alpine
 
 COPY --from=build /app/.medusa/server/public/admin ./public
 
-RUN npm install -g http-server
+RUN npm install -g serve
 
-EXPOSE 3000
-
-CMD ["http-server", "public", "-p", "3000"]
+CMD ["serve", "-s", "public", "-l", "3000"]
