serve spa from nginx

--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -17,10 +17,8 @@ COPY . .
 
 RUN npm run build --admin-only && npm run telemetry
 
-FROM node:alpine
+FROM socialengine/nginx-spa
 
-COPY --from=build /app/.medusa/server/public/admin ./public
+COPY --from=build /app/.medusa/server/public/admin ./app
 
-RUN npm install -g serve
-
-CMD ["serve", "-s", "public", "-l", "3000"]
+RUN chmod -R 777 /app
