fix: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested

--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -17,7 +17,7 @@ COPY . .
 
 RUN npm run build --admin-only && npm run telemetry
 
-FROM socialengine/nginx-spa
+FROM socialengine/nginx-spa:latest
 
 COPY --from=build /app/.medusa/server/public/admin ./app
 
