--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -21,6 +21,6 @@ FROM nginx:alpine
 
 COPY --from=build /app/.medusa/server/public/admin /usr/share/nginx/html
 
-EXPOSE 80
+COPY admin.nginx.conf /etc/nginx/conf.d/default.conf
 
 CMD ["nginx", "-g", "daemon off;"]
