--- a/nginx.admin.conf
+++ b/nginx.admin.conf
@@ -3,6 +3,20 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_min_length 1000;
+    gzip_types
+        text/html
+        text/css
+        text/javascript
+        application/javascript
+        application/x-javascript
+        font/woff2
+        font/woff;
+
     location / {
         try_files $uri $uri/ /index.html;
     }
