--- a/nginx.admin.conf
+++ b/nginx.admin.conf
@@ -13,16 +13,20 @@ server {
         text/css
         text/javascript
         application/javascript
-        application/x-javascript
         font/woff2
-        font/woff;
+
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-Frame-Options "DENY";
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
 
     location / {
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
     }
 
     location /assets/ {
         expires max;
-        add_header Cache-Control "public, no-transform";
+        add_header Cache-Control "public, immutable, max-age=31536000";
     }
 }
