--- a/nginx.admin.conf
+++ b/nginx.admin.conf
@@ -9,7 +9,6 @@ server {
     gzip_comp_level 6;
     gzip_min_length 1000;
     gzip_types
-        text/html
         text/css
         text/javascript
         application/javascript
@@ -17,8 +16,9 @@ server {
 
     add_header X-Content-Type-Options "nosniff";
     add_header X-Frame-Options "DENY";
-    add_header 'Access-Control-Allow-Origin' '*';
-    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+    add_header "Access-Control-Allow-Origin" $http_origin;
+    add_header "Access-Control-Allow-Methods" "GET, OPTIONS";
+    add_header Vary "Accept-Encoding";
 
     location / {
         try_files $uri $uri/ /index.html;
