--- a/nginx.admin.conf
+++ b/nginx.admin.conf
@@ -3,30 +3,12 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_min_length 1000;
-    gzip_types
-        text/css
-        text/javascript
-        application/javascript
-        font/woff2
-
-    add_header X-Content-Type-Options "nosniff";
-    add_header X-Frame-Options "DENY";
-    add_header "Access-Control-Allow-Origin" $http_origin;
-    add_header "Access-Control-Allow-Methods" "GET, OPTIONS";
-    add_header Vary "Accept-Encoding";
-
     location / {
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache";
     }
 
     location /assets/ {
         expires max;
-        add_header Cache-Control "public, immutable, max-age=31536000";
+        add_header Cache-Control "public, immutable";
     }
 }
