chore: update packages

--- a/Dockerfile.admin
+++ b/Dockerfile.admin
@@ -2,12 +2,11 @@ FROM node:alpine AS build
 
 WORKDIR /app
 
-ARG STORE_CORS=${STORE_CORS}
-ARG ADMIN_CORS=${ADMIN_CORS}
-ARG AUTH_CORS=${AUTH_CORS}
-ARG MEDUSA_BACKEND_URL=${MEDUSA_BACKEND_URL}
-ARG DISABLE_MEDUSA_ADMIN=false
-ENV DISABLE_MEDUSA_ADMIN=false
+ARG STORE_CORS=${STORE_CORS} \
+    ADMIN_CORS=${ADMIN_CORS} \
+    AUTH_CORS=${AUTH_CORS} \
+    MEDUSA_BACKEND_URL=${MEDUSA_BACKEND_URL} \
+    DISABLE_MEDUSA_ADMIN=false
 
 COPY package.json package-lock.json ./
 
