--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -2,15 +2,14 @@ FROM node:alpine AS build
 
 WORKDIR /app
 
-ARG STORE_CORS=${STORE_CORS}
-ARG ADMIN_CORS=${ADMIN_CORS}
-ARG AUTH_CORS=${AUTH_CORS}
-ARG JWT_SECRET=${JWT_SECRET}
-ARG COOKIE_SECRET=${COOKIE_SECRET}
-ARG DATABASE_URL=${DATABASE_URL}
-ARG REDIS_URL=${REDIS_URL}
-ARG DISABLE_MEDUSA_ADMIN=true
-ENV DISABLE_MEDUSA_ADMIN=true
+ARG STORE_CORS=${STORE_CORS} \
+    ADMIN_CORS=${ADMIN_CORS} \
+    AUTH_CORS=${AUTH_CORS} \
+    JWT_SECRET=${JWT_SECRET} \
+    COOKIE_SECRET=${COOKIE_SECRET} \
+    DATABASE_URL=${DATABASE_URL} \
+    REDIS_URL=${REDIS_URL} \
+    DISABLE_MEDUSA_ADMIN=true
 
 COPY package.json ./
 
